# bagz-index

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
protos/: key_types.proto  messages.proto
src/bagz_index/: __init__.py  cli.py  core.py  generate_logic.py  hashtable.py  key_utils.py  trigram.py
src/bagz_index/protos/: key_types_pb2.py  key_types_pb2.pyi  messages_pb2.py  messages_pb2.pyi
tests/: test_generate_logic.py  test_key_lookup.py  test_trigram.py
