[project]
name = "bagz-index"
version = "0.1.0"
description = "A static hashtable stored in a bag(z) file."
authors = [
    { name = "Tobias Sargeant", email = "tobias.sargeant@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bagz",
    "blake3",
    "protobuf>=6.31.2",
    "pytest>=8.4.1",
    "types-protobuf>=6.30.2.20250822",
]

[project.scripts]
bagz-index = "bagz_index.cli:main"

[project.optional-dependencies]
cli = [
    "click",
    "grpcio-tools",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy",
]

[build-system]
requires = ["hatchling", "hatch-protobuf", "grpcio-tools"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.protobuf]
proto_paths = ["protos"]
output_path = "src/bagz_index/protos/"
generate_grpc = false
generate_pyi = true

[tool.ruff]
line-length = 88
target-version = "py311"
indent-width = 2
exclude = [ ".venv", "src/bagz_index/protos" ]

[tool.hatch.build.targets.sdist]
packages = ["src/bagz_index"]

[tool.ruff.lint]
select = ["A", "B", "C",  "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "FBT", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # asserts.
    "S102",     # exec().
    "PLR2004",  # magic value comparisons.
    "SLF001"    # private method access.
]

[tool.mypy]
ignore_missing_imports = true
exclude = "^.*_pb2.py$"
